# Saerix-Finance-7b-Rag

./: .env.example  .gitignore  EVDS_14-07-2026.xlsx  LICENSE  README.md  bist30_yillik_fiyatlar_2010_2025(1).xlsx  borsa_bot_ui.py  borsa_chart.py  borsa_logic.py  borsa_simulation.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
configs/: config.yaml
electron/: README.md  db.js  index.html  main.js  package-lock.json  package.json  renderer.js  styles.css  sw.js
scripts/: download_data.py
src/: docs_loader.py  rag_pipeline.py  yearly_prices.py  yfinance_cagr.py
src/fetchers/: evds_excel.py  tcmb_evds.py
