[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saerix-finance-rag"
version = "0.1.0"
description = "Local 7B LLM + RAG for BIST/US equity analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "yfinance>=0.2.51",
    "faiss-cpu>=1.8",
    "ollama>=0.3",
    "sentence-transformers>=3.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "tqdm>=4.66",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.4", "pyright>=1.1"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "T20"]
ignore = ["S101", "B008"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"